wrote menu bar, started home page

--- a/index.html
+++ b/index.html
@@ -1,13 +1,72 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/homepage.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="fonts/helvetica.css">
         <title>OWLink Communications</title>
     </head>
     <body>
         <div class="menubar">
-
+            <img src="img/logo.png" href="/">
+            <p>OWLink <span>Communications</span></p>
+             <ul><span>Personal</span>
+                <div>
+                    <li><a>Unity phone</a></li>
+                    <li><a>Home phone replacement</a></li>
+                    <li><a>Virtual phone numbers</a></li>
+                    <li><a>Robocop</a></li>
+                </div>
+             </ul>
+             <ul><span>Business</span>
+                <div>
+                    <li><a>Unity phone for teams</a></li>
+                    <li><a>Cloud key system</a></li>
+                </div>
+             </ul>
+             <ul><span>Carrier</span>
+             </ul>
+             <ul><span>About</span>
+             </ul>
+             <ul><span>Contact</span>
+             </ul>
         </div>
+
         <div class="fp-greeter">
+            <h1>Cutting-Edge <span>Telecommunications</span> Services for Home and Business</h1>
+        </div>
+        <div class="fp-homeoverview">
+            <h2>Home + Personal</h2>
+            <h3>Home phone replacement</h3>
+            <h3>Unity Phone</h3>
+            <h3>Virtual Phone Numbers</h3>
+            <h3>Robocop advanced mitigation</h3>
+        </div>
+        <div class="fp-whyus">
+            <h2>Why OWLink?</h2>
+            <p>
+                We know the telecommunications space is highly competitive,
+                and that you likely have dozens of providers to choose from.
+                So, why use us? There's one clear reason: We Care. Our passion
+                for the industry and serving our customers is visible in everything
+                we do. 
+                
+                It's why unlike almost all other carriers (including some
+                of the biggest names in the industry) we're full Local Exchange
+                Carriers, with our own direct connections to the PSTN. We aren't
+                an IP-only carrier relying on another company to host our numbers,
+                and we aren't an unregulated, fly-by-night reseller, simply billing
+                for access to other carrier's resources.
+
+                It's why we don't sell unsustainable, misleading "only taxes and fees"
+                plans, hide the cost of service with hardware, and why we don't hide fees
+                from users until after purchase.
+            </p>
+        </div>
+        <div class="footer">
 
         </div>
     </body>
