work on main page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
              <ul><span>Personal</span>
                 <div>
                     <li><a>Unity phone</a></li>
-                    <li><a>Home phone replacement</a></li>
+                    <li><a>Landline / POTS replacement</a></li>
                     <li><a>Virtual phone numbers</a></li>
                     <li><a>Robocop</a></li>
                 </div>
@@ -40,10 +40,31 @@
         </div>
         <div class="fp-homeoverview">
             <h2>Home + Personal</h2>
-            <h3>Home phone replacement</h3>
-            <h3>Unity Phone</h3>
-            <h3>Virtual Phone Numbers</h3>
-            <h3>Robocop advanced mitigation</h3>
+            <div class="fp-ovbox">
+                <h3>Landline / POTS replacement</h3>
+                <p>
+                    Looking for a simple, affordable, home phone line? Whether you are looking to set
+                    up your first home phone, or you are looking to replace your overpriced, spam-riddled
+                    traditional copper landline, our home phone service will allow your to keep your
+                    existing phone, while receiving all the benifits of next-geneneration VoIP service.
+                </p>
+            </div>
+            <div class="fp-ovbox">
+                <h3>Virtual Phone Numbers</h3>
+                <p>
+                    Tired of giving out your real phone number to spammers? Need an additional number
+                    for work calls? Our virtual phone number service will allow you to set up additional
+                    phone numbers which you can configure to route to your main line, your voicemail,
+                    or any other destination based on the caller.
+                </p>
+            </div>
+            <div class="fp-ovbox">
+                <h3>Unity Phone</h3>
+                <p>Our flagship unity phone system</p>
+            </div>
+            <div class="fp-ovbox">
+                <h3>Robocop spam mitigation</h3>
+            </div>
         </div>
         <div class="fp-whyus">
             <h2>Why OWLink?</h2>
