Finished home page, added SSI

--- a/index.html
+++ b/index.html
@@ -10,43 +10,20 @@
         <title>OWLink Communications</title>
     </head>
     <body>
-        <div class="menubar">
-            <img src="img/logo.png" href="/">
-            <p>OWLink <span>Communications</span></p>
-             <ul><span>Personal</span>
-                <div>
-                    <li><a>Unity phone</a></li>
-                    <li><a>Landline / POTS replacement</a></li>
-                    <li><a>Virtual phone numbers</a></li>
-                    <li><a>Robocop</a></li>
-                </div>
-             </ul>
-             <ul><span>Business</span>
-                <div>
-                    <li><a>Unity phone for teams</a></li>
-                    <li><a>Cloud key system</a></li>
-                </div>
-             </ul>
-             <ul><span>Carrier</span>
-             </ul>
-             <ul><span>About</span>
-             </ul>
-             <ul><span>Contact</span>
-             </ul>
-        </div>
-
+        <? include "html/header.html"; ?>
         <div class="fp-greeter">
             <h1>Cutting-Edge <span>Telecommunications</span> Services for Home and Business</h1>
         </div>
         <div class="fp-homeoverview">
-            <h2>Home + Personal</h2>
+            <h2>Services</h2>
             <div class="fp-ovbox">
-                <h3>Landline / POTS replacement</h3>
+                <h3>Basic Landline</h3>
                 <p>
-                    Looking for a simple, affordable, home phone line? Whether you are looking to set
-                    up your first home phone, or you are looking to replace your overpriced, spam-riddled
-                    traditional copper landline, our home phone service will allow your to keep your
-                    existing phone, while receiving all the benifits of next-geneneration VoIP service.
+                    Looking for a simple, affordable, phone line for your home or business? 
+                    Whether you are looking to set up a new phone, or you are looking to 
+                    replace your overpriced, spam-riddled traditional copper landline, our landline
+                    service will allow your to keep your existing phone, while receiving all the 
+                    benefits of next-generation VoIP service.
                 </p>
             </div>
             <div class="fp-ovbox">
@@ -55,15 +32,89 @@
                     Tired of giving out your real phone number to spammers? Need an additional number
                     for work calls? Our virtual phone number service will allow you to set up additional
                     phone numbers which you can configure to route to your main line, your voicemail,
-                    or any other destination based on the caller.
+                    SMS, email, a pager, or any other destination. These numbers can be configured to 
+                    route based on caller, spam status, time of day, or based on an IVR system.
                 </p>
             </div>
             <div class="fp-ovbox">
                 <h3>Unity Phone</h3>
-                <p>Our flagship unity phone system</p>
+                <p>
+                    Our unity phone system unifies your home/business and mobile communications,
+                    allowing you to take your phone number and communications with you wherever you
+                    go. Unity phone combines the best features of a next-generation IP phone system with the
+                    mobility and SMS features of a cell phone, making it the best choice for those 
+                    looking to modernize their personal communications.
+                </p>
             </div>
             <div class="fp-ovbox">
-                <h3>Robocop spam mitigation</h3>
+                <h3>Fax Service</h3>
+                <p>
+                    Need to fax? Our fax service allows you to send and receive 
+                    high-quality faxes over a traditional physical fax machine or over email. 
+                    Available as either a standalone service, or as an add-on to any existing phone number.
+                </p>
+            </div>
+        </div>
+        <div class="fp-advsvc">
+            <h2>Included Features</h2>
+            <div class="fp-svcbox">
+                <h3>Robocop advanced robocall mitigation</h3>
+                <p>
+                    All of our services include our Robocop anti-robocalling system. Robocop
+                    combines aggregated robocall data from tens of thousands of specially seeded
+                    trap numbers, complaints from real customers, network and signalling data, and
+                    realtime, interactive screening to deliver a highly effective and minimally intrusive
+                    screening experience. Even better than this, Robocop is adaptive, learning from
+                    every call it receives to automatically whitelist your contacts. In less than a
+                    week, Robocop will be able to block 99% of inbound robocalls, without annoying
+                    and intrusive voice prompts for every caller.
+                </p>
+            </div>
+            <div class="fp-svcbox">
+                <h3>SMS Service</h3>
+                <p>
+                    For residential customers of our unity phone service, we offer SMS service,
+                    accessible from any device connected to your number. As with our voice service,
+                    our SMS service includes latest-and-greatest spam filtering technology.
+                </p>
+            </div>
+            <div class="fp-svcbox">
+                <h3>Secure, encrypted calls</h3>
+                <p>
+                    All of our telephone switches support encrypted SIP and RTP streams, ensuring that
+                    your calls are secured against hackers, illegal wiretapping and ISP snooping.
+                </p>
+            </div>
+            <div class="fp-svcbox">
+                <h3>Caller Name</h3>
+                <p>
+                    We preform caller name (CNAM) lookups for all inbound calls, and refresh our
+                    internal databases weekly, ensuing that your phone always displays an accurate
+                    name for inbound callers. We also support syncing your contacts, ensuring accurate
+                    caller name for your home and office phones.
+                </p>
+            </div>
+            <div class="fp-svcbox">
+                <h3>Advanced voicemail</h3>
+                <p>
+                    All voicemail boxes support voicemail-to-email or SMS and optional voicemail
+                    transcription services, and large voicemail box size limits.
+                </p>
+            </div>
+            <div class="fp-svcbox">
+                <h3>Call forwarding</h3>
+                <p>
+                    All numbers support optional call forwarding for non-answered and 
+                    busy calls.
+                </p>
+            </div>
+            <div class="fp-svcbox">
+                <h3>Call waiting</h3>
+                <p>
+                    All of our lines support multiple simultaneous calls,
+                    enabling call waiting on supported hardware, and allow multiple
+                    users to make calls at the same time. 
+                </p>
             </div>
         </div>
         <div class="fp-whyus">
@@ -74,21 +125,33 @@
                 So, why use us? There's one clear reason: We Care. Our passion
                 for the industry and serving our customers is visible in everything
                 we do. 
-                
+                <br><br>
                 It's why unlike almost all other carriers (including some
                 of the biggest names in the industry) we're full Local Exchange
                 Carriers, with our own direct connections to the PSTN. We aren't
                 an IP-only carrier relying on another company to host our numbers,
                 and we aren't an unregulated, fly-by-night reseller, simply billing
                 for access to other carrier's resources.
-
-                It's why we don't sell unsustainable, misleading "only taxes and fees"
-                plans, hide the cost of service with hardware, and why we don't hide fees
-                from users until after purchase.
+                <br><br>
+                It's why we don't charge misleading and superfluous fees and surcharges,
+                or offer misleading "taxes and fees" plans, which camouflage the real cost
+                of the service in nebulous "subscriber line charge" fees.
+                <br><br>
+                It's why we are committed to ongoing innovation in the telecoms space,
+                innovating new features and services for our customers, helping to move
+                the telecommunications industry into the 21st century.
             </p>
         </div>
-        <div class="footer">
-
+        <div class="fp-contactus">
+            <h2>Ready to upgrade your phone service? Contact us today!</h2>
+            <P>Contact us anytime to get set up, or to discuss your needs. We are 
+                passionate about telecoms, and are happy to discuss your needs. Weather
+                you need standard telephony service, or need a specialized, custom service,
+                we are always ready to help.
+            </P>
+            <p>E-Mail: contact@owlink.net <br>
+               Phone: (888) 555 - 777</p>
         </div>
+        <? include "html/footer.html"; ?>
     </body>
 </html>
