updated php, menu

--- a/html/footer.html
+++ b/html/footer.html
@@ -7,7 +7,7 @@
     <div class="footer-spacer"></div>
     <div>
         <h3>Legal</h3>
-        <a href="#">Acceptable Use Policy</a> <br>
-        <a href="#">Robocall Mitigation Policy</a>
+        <a href="https://ricetelecom.net/aup.html">Acceptable Use Policy</a> <br>
+        <a href="https://ricetelecom.net/rmp.pdf">Robocall Mitigation Policy</a>
     </div>
 </div>
