--- a/html/header.html
+++ b/html/header.html
@@ -1,7 +1,7 @@
 <div class="menubar">
     <a href="/"><img src="img/logo.png" href="/"></a>
     <a href="/" id="menubar-title"><p>OWLink <span>Communications</span></p></a>
-     <ul><span>Personal</span>
+     <!--<ul><span>Personal</span>
         <div>
             <li><a>Unity phone</a></li>
             <li><a>Landline / POTS replacement</a></li>
@@ -14,7 +14,7 @@
             <li><a>Unity phone for teams</a></li>
             <li><a>Cloud key system</a></li>
         </div>
-     </ul>
+     </ul>-->
      <ul><span>Carrier</span>
      </ul>
      <ul><span>About</span>
