changed to folders

--- a/owlink-site/html/header.html
+++ b/owlink-site/html/header.html
@@ -1,5 +1,5 @@
 <div class="menubar">
-    <a href="/"><img src="img/logo.png" href="/"></a>
+    <a href="/"><img src="img/logo-1.svg" href="/"></a>
     <a href="/" id="menubar-title"><p>OWLink <span>Communications</span></p></a>
      <!--<ul><span>Personal</span>
         <div>
